added simple metro log support to help debug added new entry point : protocol and cintact panel for both contact app and contact bar added support for startup direct to chatPage added button to dump contact in contact store added enter key support to submit added detection of unread messages
code is a mess from copy past test + doc, need a cleanup

--- a/App3/App3.csproj
+++ b/App3/App3.csproj
@@ -145,6 +145,9 @@
     <PackageReference Include="HtmlAgilityPack">
       <Version>1.6.15</Version>
     </PackageReference>
+    <PackageReference Include="MetroLog">
+      <Version>1.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.6</Version>
     </PackageReference>
