Small refactor : Moved data class to separated folder and files cleaned up allready prepared ChatMessage  types handleling

--- a/App3/App3.csproj
+++ b/App3/App3.csproj
@@ -101,6 +101,8 @@
     <Compile Include="ChatPage.xaml.cs">
       <DependentUpon>ChatPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Data\ChatHeader.cs" />
+    <Compile Include="Data\ChatMessage.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
