move more data logic code out of xaml pages

--- a/App3/App3.csproj
+++ b/App3/App3.csproj
@@ -103,6 +103,7 @@
     </Compile>
     <Compile Include="Data\ChatHeader.cs" />
     <Compile Include="Data\ChatMessage.cs" />
+    <Compile Include="Data\DataSource.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
