--- a/App3/App3.csproj
+++ b/App3/App3.csproj
@@ -112,8 +112,12 @@
     <Compile Include="Data\ChatMessage.cs" />
     <Compile Include="Data\DataSource.cs" />
     <Compile Include="Helpers\Helpers.cs" />
+    <Compile Include="MessengerLightPage.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="NoInternetRibon.xaml.cs">
+      <DependentUpon>NoInternetRibon.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\UserAgent.cs" />
@@ -199,6 +203,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="NoInternetRibon.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
