added combined emoji support added html entitized + emoji support in message preview added extended imput textbox

--- a/App3/App3.csproj
+++ b/App3/App3.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Data\ChatMessage.cs" />
     <Compile Include="Data\DataSource.cs" />
     <Compile Include="Helpers\Helpers.cs" />
+    <Compile Include="Helpers\MultiLinesTextBox.cs" />
     <Compile Include="MessengerLightPage.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
