Added UI for web popup fixed link color lowered group name font

--- a/App3/App3.csproj
+++ b/App3/App3.csproj
@@ -127,6 +127,9 @@
     <Compile Include="ViewModels\ChatViewModel.cs" />
     <Compile Include="ViewModels\ObservableViewModelCollection.cs" />
     <Compile Include="Helpers\PropertyChangedHelper.cs" />
+    <Compile Include="WebPopUp.xaml.cs">
+      <DependentUpon>WebPopUp.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -206,6 +209,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="NoInternetRibon.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WebPopUp.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
